--- a/frontend/EventGo-App/src/app/components/eventos/detalhe-evento/detalhe-evento.component.html
+++ b/frontend/EventGo-App/src/app/components/eventos/detalhe-evento/detalhe-evento.component.html
@@ -45,10 +45,11 @@
             type="datetime"
             class="form-control"
             [ngClass]="cssValidator(f.dataEvento)"
-            formControlName="dataEvento"
-            placeholder=""
+            value="{{ evento.dataEvento | DateFormatPipe }}"
             bsDatepicker
             [bsConfig]="bsconfig"
+            placeholder=""
+            formControlName="dataEvento"
           />
           <div *ngIf="f.dataEvento.errors?.required" class="invalid-feedback">
             Data e Hora é obrigatório
@@ -127,7 +128,7 @@
         <button
           class="btn btn-success"
           [disabled]="!form.valid"
-          (click)="saveChanges()"
+          (click)="saveEvento()"
         >
           <!-- <span class="spinner-border spinner-border-sm mr-1"></span> -->
           Salvar Evento
@@ -136,7 +137,8 @@
     </div>
   </form>
 </div>
-<div class="card rounded shadow-sm mt-4">
+
+<div class="card rounded shadow-sm mt-4" *ngIf="editmode">
   <div class="p-3">
     <div class="d-flex border-bottom">
       <h2 class="me-auto">Lotes do Evento</h2>
@@ -156,6 +158,7 @@
               <button
                 class="p-2 btn btn-sm btn-outline-warning mb-1 d-flex align-items-center"
                 tooltip="Excluir Lote"
+                (click)="removeLote(i, template)"
                 [adaptivePosition]="false"
                 [delay]="500"
                 placement="left"
@@ -178,6 +181,7 @@
               <div class="form-group col-md-4">
                 <label>Quantidade</label>
                 <input
+                  [ngClass]="cssValidator(lotes.get(i + '.quantidade'))"
                   type="text"
                   class="form-control"
                   formControlName="quantidade"
@@ -187,6 +191,7 @@
               <div class="form-group col-md-4">
                 <label>Preço</label>
                 <input
+                  [ngClass]="cssValidator(lotes.get(i + '.preco'))"
                   type="text"
                   currencyMask
                   class="form-control"
@@ -197,8 +202,11 @@
               <div class="form-group col-md-4">
                 <label>Data Início</label>
                 <input
+                  [ngClass]="cssValidator(lotes.get(i + '.dataInicio'))"
                   type="text"
                   class="form-control"
+                  bsDatepicker
+                  [bsConfig]="bsconfigLote"
                   formControlName="dataInicio"
                   placeholder="01/01/2019"
                 />
@@ -206,8 +214,11 @@
               <div class="form-group col-md-4">
                 <label>Data Fim</label>
                 <input
+                  [ngClass]="cssValidator(lotes.get(i + '.dataFim'))"
                   type="text"
                   class="form-control"
+                  bsDatepicker
+                  [bsConfig]="bsconfigLote"
                   formControlName="dataFim"
                   placeholder="01/01/2019"
                 />
@@ -230,7 +241,22 @@
       <button class="btn btn-outline-secondary me-auto border">
         Cancelar Alteração
       </button>
-      <button class="btn btn-success">Salvar Lotes</button>
+      <button (click)="saveLotes()" class="btn btn-success">
+        Salvar Lotes
+      </button>
     </div>
   </div>
 </div>
+<br />
+
+<ng-template #template>
+  <div class="modal-body text-center">
+    <p>Deseja realmente excluir o lote {{ this.currentLote.nome }}?</p>
+    <button type="button" class="btn btn-default" (click)="confirmDeleteLote()">
+      Sim
+    </button>
+    <button type="button" class="btn btn-primary" (click)="declineDeleteLote()">
+      Não
+    </button>
+  </div>
+</ng-template>
