--- a/frontend/EventGo-App/src/app/components/eventos/detalhe-evento/detalhe-evento.component.html
+++ b/frontend/EventGo-App/src/app/components/eventos/detalhe-evento/detalhe-evento.component.html
@@ -140,6 +140,7 @@
 
 <div class="card rounded shadow-sm mt-4" *ngIf="editmode">
   <div class="p-3">
+    <!-- <p>Valores do Form: ${{ form.controls["lotes"].value | json }}</p> -->
     <div class="d-flex border-bottom">
       <h2 class="me-auto">Lotes do Evento</h2>
       <h2>
@@ -155,6 +156,7 @@
         >
           <fieldset [formGroupName]="i" class="form-group">
             <legend class="d-flex justify-content-between capitalize">
+              {{ returnLoteName(lotes.get(i + ".nome").value) }}
               <button
                 class="p-2 btn btn-sm btn-outline-warning mb-1 d-flex align-items-center"
                 tooltip="Excluir Lote"
@@ -194,6 +196,12 @@
                   [ngClass]="cssValidator(lotes.get(i + '.preco'))"
                   type="text"
                   currencyMask
+                  [options]="{
+                    prefix: 'R$ ',
+                    thousands: '.',
+                    decimal: ',',
+                    align: 'left'
+                  }"
                   class="form-control"
                   formControlName="preco"
                   placeholder="R$ 0,00"
@@ -241,7 +249,11 @@
       <button class="btn btn-outline-secondary me-auto border">
         Cancelar Alteração
       </button>
-      <button (click)="saveLotes()" class="btn btn-success">
+      <button
+        (click)="saveLotes()"
+        class="btn btn-success"
+        [disabled]="!form.controls['lotes'].valid"
+      >
         Salvar Lotes
       </button>
     </div>
