⭐ Finalizing image upload in frontend

--- a/frontend/EventGo-App/src/app/components/eventos/lista-evento/lista-evento.component.html
+++ b/frontend/EventGo-App/src/app/components/eventos/lista-evento/lista-evento.component.html
@@ -31,7 +31,7 @@
           <button
             type="button"
             class="btn btn-outline-light btn-sm"
-            (click)="showImg()"
+            (click)="changeVisualization()"
           >
             <i class="{{ !displayImg ? 'fa fa-eye' : 'fa fa-eye-slash' }}"></i>
             {{ !displayImg ? "Exibir" : "Ocultar" }}
@@ -57,7 +57,7 @@
           <img
             [collapse]="!displayImg"
             [isAnimated]="true"
-            src="/assets/{{ e.imagemURL }}"
+            [src]="showImage(e.imagemURL)"
             [style.width.px]="imgWidth"
             [style.margin.px]="imgMargin"
           />
