--- a/frontend/EventGo-App/src/app/shared/navbar/navbar.component.html
+++ b/frontend/EventGo-App/src/app/shared/navbar/navbar.component.html
@@ -3,7 +3,7 @@
   *ngIf="showMenu()"
 >
   <div class="container">
-    <a class="navbar-brand" routerLink="dashboard" [tooltip]="'EventGo'">
+    <a class="navbar-brand" routerLink="home" [tooltip]="'EventGo'">
       <i class="fa-solid fa-person-running"></i>
     </a>
     <button
@@ -25,21 +25,45 @@
       id="navbarNav"
     >
       <ul class="navbar-nav me-auto">
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" aria-current="page" routerLink="eventos/lista"
-            >Eventos</a
-          >
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="organizadores">Organizadores</a>
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="contatos">Contatos</a>
-        </li>
+        <ng-container *ngIf="(accountService.currentUser$ | async) !== null">
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" aria-current="page" routerLink="dashboard"
+              >Dashboard</a
+            >
+          </li>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" aria-current="page" routerLink="eventos/lista"
+              >Eventos</a
+            >
+          </li>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="organizadores">Organizadores</a>
+          </li>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="contatos">Contatos</a>
+          </li>
+        </ng-container>
       </ul>
 
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown" dropdown>
+      <div
+        *ngIf="(accountService.currentUser$ | async) === null"
+        class="navbar-nav me-3 d-xs-none d-none d-md-block"
+      >
+        <a class="btn btn-light me-2 border" routerLink="/user/login">Entrar</a>
+        <a class="btn btn-warning" routerLink="/user/registration"
+          >Me Cadastrar</a
+        >
+      </div>
+
+      <ul
+        *ngIf="(accountService.currentUser$ | async) !== null"
+        class="navbar-nav"
+      >
+        <li
+          class="nav-item dropdown"
+          dropdown
+          *ngIf="accountService.currentUser$ | async as user"
+        >
           <a
             dropdownToggle
             class="nav-link dropdown-toggle"
@@ -49,16 +73,18 @@
             aria-haspopup="true"
             aria-expanded="false"
           >
-            Thiago
+            {{ user.userName | titlecase }}
           </a>
           <div
             *dropdownMenu
-            class="dropdown-menu"
+            class="dropdown-menu dropdown-menu-end"
             aria-labelledby="navbarDropdownMenuLink"
           >
             <a class="dropdown-item" routerLink="user/perfil"> Perfil </a>
             <div role="separator" class="divider"></div>
-            <a class="dropdown-item" routerLink="user/login"> Sair </a>
+            <a (click)="logout()" class="dropdown-item" style="cursor: pointer">
+              Sair
+            </a>
           </div>
         </li>
       </ul>
